<resources>
    <string name="app_name">Glook Vendor</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="get_started">Get Started with GLOOK</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Signup</string>
    <string name="desc_text">Get Easy Access to services at your 
    comfort, time and freedom</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="have_an_account">Have an Account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="appointments">Appointments</string>
    <string name="payments">Payments</string>
    <string name="profile">Profile</string>
    <string name="services">Services</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="help_and_support">Help and Support</string>
    <string name="about_your_business">Tell us about your business</string>
    <string name="business_info">This infomation will be showed to your
        client before booking</string>
    <string name="next">Next</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="hint_bvn">BVN</string>
    <string name="upload_images">Upload Images</string>
    <string name="add_service">Add Service</string>
    <string name="user_info">Let the user know what kind of services you offer</string>
    <string name="service_one">Service 1</string>
    <string name="amount">Amount</string>
    <string name="service_two">Service 2</string>
    <string name="add_card">Add Card</string>
    <string name="sub_card_text">Add your Bank details to enable payments</string>
    <string name="account_name">Account Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="call">Call</string>
    <string name="requests">Requests</string>
    <string name="service_name">Service Name</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="save">Save</string>
    <string name="wallet">Wallet</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="balance">Balance</string>
    <string name="request_payout">Request Payout</string>
    <string name="payout_history">Payout History</string>
    <string name="finish">Finish</string>
    <string name="action_logout">Logout</string>
</resources>
