<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddBusinessActivity"
        android:padding="16dp">

    <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView7"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:text="@string/add_service"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:id="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

    <TextView
            android:text="@string/user_info"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:id="@+id/business_info"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintHorizontal_bias="0.489"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout3"
            app:layout_constraintTop_toBottomOf="@id/business_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_one"
                android:textColorHint="@color/ash_color"
                android:drawablePadding="4dp"
                android:id="@+id/service_name1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout4"
            app:layout_constraintTop_toBottomOf="@id/textlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/ash_color"
                android:drawablePadding="4dp"
                android:hint="@string/amount"
                android:id="@+id/service_cost1"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textlayout4"
            app:layout_constraintStart_toStartOf="@+id/textlayout4"
            android:background="@drawable/login_btn_bg"
            app:layout_constraintHorizontal_bias="0.0"
            android:text="@string/finish"
            android:textStyle="bold"
            android:id="@+id/submit_service_btn"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textlayout4"/>
</android.support.constraint.ConstraintLayout>