<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity"
        android:paddingLeft="@dimen/intro_text_padding"
        android:paddingRight="@dimen/intro_text_padding">

    <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/home_bg"
            android:id="@+id/profile_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>


    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout1"
            app:layout_constraintTop_toBottomOf="@id/profile_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/intro_text_padding"
            tools:layout_editor_absoluteX="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/ash_color"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:drawableLeft="@drawable/ic_person"
                android:paddingLeft="@dimen/intro_text_padding"
                android:paddingRight="@dimen/intro_text_padding"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout2"
            app:layout_constraintTop_toBottomOf="@id/textlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_person"
                android:paddingRight="@dimen/intro_text_padding"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout3"
            app:layout_constraintTop_toBottomOf="@id/textlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_person"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout4"
            app:layout_constraintTop_toBottomOf="@id/textlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/services"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/services"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout5"
            app:layout_constraintTop_toBottomOf="@id/textlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_lock"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textlayout5"
            app:layout_constraintEnd_toEndOf="@+id/textlayout5"
            app:layout_constraintStart_toStartOf="@+id/textlayout5"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/login_btn_bg"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:text="@string/save"
            android:textStyle="bold"
            android:id="@+id/submit_shop_btn"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

</android.support.constraint.ConstraintLayout>