<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/colorPrimary">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imageView4"
                    android:layout_marginTop="80dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.498"/>

            <TextView
                    android:text="@string/login_to_continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintEnd_toEndOf="@+id/imageView4"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4"
                    app:layout_constraintHorizontal_bias="0.492"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout4"
            app:layout_constraintTop_toBottomOf="@+id/login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toStartOf="@+id/login_card"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/login_card"
            android:layout_marginRight="8dp">

        <EditText
                android:layout_width="match_parent"
                android:id="@+id/login_email_et"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_person" android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout5"
            app:layout_constraintTop_toBottomOf="@id/textlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

        <EditText
                android:layout_width="match_parent"
                android:id="@+id/login_password_et"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_lock" android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>


    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login_text"
            android:textStyle="bold"
            android:id="@+id/sign_in_btn"
            app:layout_constraintEnd_toEndOf="@+id/textlayout5"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/textlayout5"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_link"/>

    <TextView
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:id="@+id/forgot_password_link"
            android:textColor="@color/ash_color"
            tools:text="@string/forgot_password"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textlayout5"
            android:layout_marginRight="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textlayout5"/>


    <TextView
            android:text="@string/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/textView4"
            android:textColor="@color/ash_color"
            app:layout_constraintStart_toStartOf="@+id/sign_in_btn"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/sign_up_link"
            android:layout_marginRight="8dp"/>

    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_link"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="88dp"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_btn"
            android:layout_marginRight="88dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sign_in_btn"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>