<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddBusinessActivity"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView7"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintVertical_bias="0.071"/>

    <TextView
            android:text="@string/about_your_business"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:id="@+id/textView9"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/business_info"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"/>

    <TextView
            android:text="@string/business_info"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:id="@+id/business_info"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textlayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout3"
            app:layout_constraintTop_toBottomOf="@id/business_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding"
            app:layout_constraintStart_toStartOf="@+id/business_info"
            app:layout_constraintEnd_toEndOf="@+id/business_info">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/home"
                android:drawablePadding="4dp"
                android:id="@+id/shop_name_et"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout4"
            app:layout_constraintTop_toBottomOf="@id/textlayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_address"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="4dp"
                android:id="@+id/shop_address_et"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textlayout5"
            app:layout_constraintTop_toBottomOf="@id/textlayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding"
            app:layout_constraintStart_toStartOf="@+id/textlayout4"
            app:layout_constraintEnd_toEndOf="@+id/textlayout4">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bvn"
                android:textColorHint="@color/ash_color"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="4dp"
                android:id="@+id/bvn_et"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
            android:id="@+id/business_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:padding="@dimen/mid_padding"
            app:srcCompat="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textlayout3"
            app:layout_constraintEnd_toEndOf="@+id/textlayout5"
            app:layout_constraintStart_toStartOf="@+id/textlayout5"
            android:background="#E2DDDD"/>

    <Button
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/next"
            android:textStyle="bold"
            android:id="@+id/submit_shop_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/business_image"
            app:layout_constraintVertical_bias="0.111"
            app:layout_constraintStart_toStartOf="@+id/business_image"
            app:layout_constraintEnd_toEndOf="@+id/business_image"/>
</android.support.constraint.ConstraintLayout>