<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom"
        android:id="@+id/linearLayout">

    <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="122dp"
            android:layout_height="105dp"
            android:src="@drawable/home_bg"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.083"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.171"/>

</android.support.constraint.ConstraintLayout>
